kube/deployments/deployment-archivematica-mcp-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivematica-mcp-server
  namespace: '#{namespace}#'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: archivematica-mcp-server
      app.kubernetes.io/instance: '#{namespace}#'
      app.kubernetes.io/part-of: piqlconnect
      app.kubernetes.io/managed-by: azure-devops  
  strategy:
    type: Recreate
  template:
    metadata:    
      labels:
        app.kubernetes.io/name: archivematica-mcp-server
        app.kubernetes.io/instance: '#{namespace}#'
        app.kubernetes.io/version: "#{VERSION}#"    
        app.kubernetes.io/part-of: piqlconnect
        app.kubernetes.io/managed-by: azure-devops
    spec:
      securityContext:
        fsGroup: 333
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - image: '#{DOCKER_REGISTRY}#/archivematica-mcp-server:#{VERSION}#'
          name: archivematica-mcp-server
          securityContext:
            runAsUser: 333
            runAsGroup: 333        
          resources: 
            requests:
              memory: "256Mi"
              cpu: "1m"
            limits:
              memory: "2048Mi"
              cpu: "1000m"
          volumeMounts:          
            - mountPath: /var/archivematica/sharedDirectory
              name: archivematica-pipeline-data
    
      volumes:
        - name: archivematica-pipeline-data
          persistentVolumeClaim:
            claimName: '#{namespace}#-pipeline-data-claim'

      restartPolicy: Always
      nodeSelector:
        kubernetes.io/os: linux
