kube/deployments/deployment-clamavd.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivematica-clamavd
  namespace: '#{namespace}#'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: archivematica-clamavd
      app.kubernetes.io/instance: '#{namespace}#'
      app.kubernetes.io/part-of: piqlconnect
      app.kubernetes.io/managed-by: azure-devops  
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: archivematica-clamavd
        app.kubernetes.io/instance: '#{namespace}#'
        app.kubernetes.io/version: "#{VERSION}#"    
        app.kubernetes.io/part-of: piqlconnect
        app.kubernetes.io/managed-by: azure-devops 
    spec:
      hostAliases:
      - ip: "104.16.218.84"
        hostnames:
        - "database.clamav.net"
      containers:
        - image: artefactual/clamav:latest
          name: clamavd
          ports:
            - containerPort: 3310
          resources: 
            requests:
              memory: "256Mi"
              cpu: "1m"
            limits:
              memory: "1024Mi"
              cpu: "250m"

          volumeMounts:
            - mountPath: /var/archivematica/sharedDirectory
              name: archivematica-pipeline-data
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: archivematica-pipeline-data
          persistentVolumeClaim:
            claimName: '#{namespace}#-pipeline-data-claim'
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  namespace: '#{namespace}#'
  name: archivematica-clamavd
  labels:
    app.kubernetes.io/name: archivematica-clamavd
    app.kubernetes.io/instance: '#{namespace}#'
    app.kubernetes.io/version: "#{VERSION}#"    
    app.kubernetes.io/part-of: piqlconnect
    app.kubernetes.io/managed-by: azure-devops
spec:
  ports:
    - name: clamavd-port
      port: 3310
      targetPort: 3310
  selector:
    app.kubernetes.io/name: archivematica-clamavd
    app.kubernetes.io/instance: '#{namespace}#'
    app.kubernetes.io/version: "#{VERSION}#"    
    app.kubernetes.io/part-of: piqlconnect
    app.kubernetes.io/managed-by: azure-devops
