kube/deployments/service-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: archivematica-mysql.mysql.database.azure.com
  clusterIP: ""
