kube/deployments/service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ExternalName
  externalName: archivematica.redis.cache.windows.net
  clusterIP: ""
